--- a/layout.jade
+++ b/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
 		script(src='http://code.jquery.com/jquery-1.10.2.min.js')
 		link(rel='stylesheet', href=REQUEST_URI+'static/bootstrap/css/bootstrap.min.css')
 		script(src=REQUEST_URI+'bootstrap/js/bootstrap.min.js')
-		
+		meta(name="viewport",content="width=device-width, initial-scale=1.0")
 	body
 		block content  
 		
